# poe

./: .gitignore  .gitmodules  Cargo.toml  Gemfile  Guardfile  README.md  Rakefile  config.json  config.ru
app/controllers/: application_controller.rb  results_controller.rb  snippets_controller.rb
app/helpers/: application_helper.rb
app/jobs/: execute_job.rb
app/models/: compiler.rb  result.rb  snippet.rb
backend/: Cargo.toml
backend/src/: compiler.rs  config.rs  main.rs  run_result.rs  snippet.rs  utils.rs
config/: application.rb  database.yml  puma.rb  routes.rb  secrets.yml  thin.rb
config/environments/: development.rb  production.rb  test.rb
config/initializers/: sandbox.rb  session_store.rb
db/: schema.rb  seeds.rb
db/migrate/: 20151226110833_create_snippets.rb  20151226120525_create_compilers.rb  20151226120716_create_results.rb  20160101024323_extend_result.rb  20160101060555_add_command_line_to_compilers.rb  20160101121151_add_language_to_snippet.rb  20160111053610_add_error_to_result.rb  20160111074143_add_truncated_to_result.rb  20160111125018_add_version_long_to_compiler.rb
frontend/: .gitignore  Rakefile  bootstrap.js  bs-config.js  index.html  package.json  poe.css  poe.scss  tsconfig.json  typings.json
frontend/app/: app.component.ts  editing-data.service.ts  (+5 more)
sandbox/: .gitignore  Makefile  cgroup.c  child.c  config.h  config_seccomp.h  main.c  playground.c  sandbox.c  sandbox.h  seccomp.c  systemd.c  utils.h
sandbox-go/: .gitignore  plan.json
src/: compiler.rs  config.rs  error.rs  main.rs  run_result.rs  snippet.rs  utils.rs
(+52 files in other folders)
