[package]
name = "poe"
version = "0.1.0"
authors = ["Kazuki Yamaguchi <k@rhe.jp>"]

[features]
default = []

[dependencies]
iron = "*"
router = "*"
rustc-serialize = { git = "https://github.com/rust-lang-nursery/rustc-serialize.git" }
libc = "*"
tempfile = "*"
hyper = "*"
rust-crypto = "*"
uuid = "*"
time = "*"
byteorder = "*"
num = "*"
